# stardust-xr-cpp

./: .gitignore  .gitmodules  AppPrefs.qml  CONTRIBUTORS.md  CompositorPrefs.qml  ExtensionLoader.qml  Panel.qml  Plane.ply  Prefs.qml  README.md  SConstruct  SceneRoot.qml  _BACKUP_17371.gitmodules  _BASE_17371.gitmodules  build.sh  compositor_prefs.json  defaults.qrc  extensionloader.cpp  extensionloader.h  keyboard.h  keyboardhandler.h  launcher.cpp  launcher.h  main.cpp  main.qml  meson.build  physicalkeyboardadapter.cpp  physicalkeyboardadapter.h  prefs.cpp  prefs.h  project.godot  qml.qrc  qwaylandtexture.cpp  qwaylandtexture.h  qwaylandtextureimage.cpp  qwaylandtextureimage.h  res.qrc  root.tscn  stardust-ui.pro  stardust-xr.pro  (+3 more)
.github/workflows/: ci.yml
.import/: icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex
addons/: pythonscript.gdnlib
core/: EntityGroup.qml  Panel.qml  SceneRoot.qml  WaylandPanel.qml  configpathgetter.cpp  configpathgetter.h  extensionloader.cpp  extensionloader.h  fileio.cpp  launcher.cpp  launcher.h  prefs.cpp  prefs.h
defaults/: StardustRenderSettings.qml  app_prefs.json  compositor_prefs.json  defaults.qrc
godot-scene/: default_env.tres  project.godot  root.tscn
godot-scene/.import/: StardustXRIcon.gltf-7cc2b5a34efc202cffbe48d1e25cb4d2.md5  StardustXRIcon.gltf-7cc2b5a34efc202cffbe48d1e25cb4d2.scn  StardustXRIcon.gltf-ad8bc605c3510988bf65408ebb8f608f.md5  StardustXRIcon.gltf-ad8bc605c3510988bf65408ebb8f608f.scn  icon.gltf-2d3838048413aef55ab086b4d52489e1.md5  icon.gltf-2d3838048413aef55ab086b4d52489e1.scn  teleport_arrow.png-9ee8732a3d27e6e53f97efad743b9f9b.md5  teleport_arrow.png-9ee8732a3d27e6e53f97efad743b9f9b.stex  teleport_target.png-779f853f62e0e2207f5821dfbc8b780c.md5  teleport_target.png-779f853f62e0e2207f5821dfbc8b780c.stex
godot_openxr/: SConstruct
include/: keyboard.cpp  keyboard.h  keyboardhandler.cpp  keyboardhandler.h  plugininterfaces.h
install/etc/: stardust.json.conf
keyboard/: keyboard.h  keyboardhandler.h  physicalkeyboardadapter.cpp  physicalkeyboardadapter.h  waylandkeyboardhandler.cpp  waylandkeyboardhandler.h
libstardustxr/: SConstruct  meson.build
libstardustxr/include/: messengermanager.hpp
libstardustxr/src/: gdlibrary.cpp  messengermanager.cpp
render/: TestSphere.qml
res/: Plane.ply  PlaneModel.blend  PlaneModel.blend1
resources/: Plane.mesh  Plane.ply  PlaneModel.blend  PlaneModel.blend1  PlaneModel.dae  Teapot.mesh  generic_skybox.hdr  resources.qrc
scripts/: build.sh  buildtest.sh
src/: globals.h  globals.hpp  main.cpp  meson.build  qml.qrc  singletons.h
src/api/: api.qrc
src/core/: DesktopPanelTitleContent.qml  Panel.qml  QMLExtensionLoader.qml  SceneRoot.qml  StereoRender.qml  WaylandPanel.qml  client.cpp  client.hpp  clientmanager.cpp  clientmanager.hpp  configpathgetter.cpp  connection.cpp  connection.hpp  eventloop.cpp  eventloop.hpp  extensionloader.cpp  extensionloader.h  fileio.h  inputmanager.cpp  inputmanager.h  launcher.h  main.qml  meson.build  messenger.cpp  messenger.hpp  moduleloader.cpp  moduleloader.h  paths.cpp  paths.h  plugininterfaces.h  pluginloader.cpp  pluginloader.h  prefs.cpp  prefs.h  scenegraph.cpp  scenegraph.hpp  scenegraphpropagation.hpp
src/integrations/: meson.build  sk_internal_defs.hpp
src/interfaces/: client.cpp  client.hpp  data.cpp  data.hpp  drawable.cpp  drawable.hpp  environment.cpp  environment.hpp  field.cpp  field.hpp  hmd.cpp  hmd.hpp  input.cpp  input.hpp  item.cpp  item.hpp  lifecycle.cpp  lifecycle.hpp  meson.build  model.cpp  model.hpp  openxr.cpp  openxr.hpp  root.cpp  root.hpp  spatial.cpp  spatial.hpp
src/keyboard/: keyboard.cpp  keyboard.h  keyboardhandler.cpp  keyboardhandler.h  passthroughkeyboardhandler.cpp  passthroughkeyboardhandler.h  physicalkeyboardadapter.cpp  physicalkeyboardadapter.h  recoverykeyboardadapter.cpp  recoverykeyboardadapter.h  waylandkeyboardhandler.cpp  waylandkeyboardhandler.h
src/module/: module.cpp  module.h  (+2 more)
src/nodetypes/: alias.cpp  drawablenode.hpp  meson.build  node.cpp  node.hpp  spatial.cpp  spatial.hpp  spatialnode.cpp  spatialnode.hpp
src/nodetypes/core/: alias.cpp  alias.hpp  callback.cpp  callback.hpp  meson.build  node.cpp  node.hpp  noderef.cpp  noderef.hpp  registry.hpp  typednoderef.hpp
src/nodetypes/data/: meson.build  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp
src/nodetypes/drawable/: drawable.cpp  drawable.hpp  drawablenode.hpp  meson.build  model.cpp  model.hpp  text.cpp  text.hpp
src/nodetypes/fields/: boxfield.cpp  boxfield.hpp  cylinderfield.cpp  cylinderfield.hpp  field.cpp  field.hpp  meson.build  roundedboxfield.cpp  roundedboxfield.hpp  spherefield.cpp  spherefield.hpp
src/nodetypes/graphical/: drawablenode.hpp  meson.build  model.cpp  model.hpp  modelnode.cpp  modelnode.hpp
src/nodetypes/input/: distancelink.hpp  inputhandler.cpp  inputhandler.hpp  inputmethod.cpp  inputmethod.hpp  meson.build
src/nodetypes/input/inputmethods/: hand.cpp  hand.hpp  meson.build  pointer.cpp  pointer.hpp
src/nodetypes/input/inputmethods/flatbuffers/: HandInput_generated.h  Input_generated.h  PointerInput_generated.h  common_generated.h
src/nodetypes/items/: acceptor.cpp  acceptor.hpp  alias.cpp  alias.hpp  environment.cpp  environment.hpp  file.hpp  item.cpp  item.hpp  itemui.cpp  itemui.hpp  meson.build  panel.cpp  panel.hpp
src/nodetypes/items/types/: environment.cpp  environment.hpp  file.cpp  file.hpp  meson.build  panel.cpp  panel.hpp
src/nodetypes/spatial/: alias.cpp  alias.hpp  meson.build  spatial.cpp  spatial.hpp  zone.cpp  zone.hpp
src/scenegraph/: drawablenode.cpp  drawablenode.hpp  meson.build  model.cpp  model.hpp  node.cpp  node.hpp  scenegraph.cpp  scenegraph.hpp
src/scenegraph/nodes/: environment.cpp  environment.hpp  field.cpp  field.hpp  input.cpp  input.hpp  lifecycle.cpp  lifecycle.hpp  meson.build  model.cpp  model.hpp  skybox.cpp  skybox.hpp  spatial.cpp  spatial.hpp
src/tests/: flatscreenpointer.cpp  flatscreenpointer.hpp  mesh.cpp  mesh.hpp  meson.build  skhand.cpp  skhand.hpp
(+191 files in other folders)
