#scenegraph_includes = include_directories('.')

#subdir('graphical')

#lib_scenegraph = static_library(
#	'scenegraph',
#	files(
#		'node.cpp',
#	),
#	include_directories: [scenegraph_includes],
#	dependencies: [graphical_types]
#)

#scenegraph = declare_dependency(
#	include_directories: scenegraph_includes,
#	link_with: lib_scenegraph
#)
